# tomanage

./: .claude.json  .gitignore  .npmrc  ARCHITECTURE.md  README.md  app.config.js  app.json  app.json.backup  eslint.config.js  metro.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.devcontainer/: README.md  devcontainer.json
.expo/types/: router.d.ts
app/: _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  chat.tsx
app/oauth/: ticktick.tsx
apps/desktop/: README.md  package.json
apps/desktop/tauri/: Cargo.toml  tauri.conf.json
apps/desktop/tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  metro.config.js  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/src/: trpc.ts
apps/server/: API_USAGE.md  README.md  index.js  package.json  tsconfig.json
apps/web/: README.md  components.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
context/: ENV_SETUP.md  EXPO_AUTHSESSION_SETUP.md  FIX_REDIRECT_URI_ERROR.md  OAUTH_TROUBLESHOOTING.md  QUICK_START_OAUTH.md  TROUBLESHOOTING.md
server/: README.md  index.js  package.json
src/components/: ChatBubble.tsx  QuickActionButtons.tsx  RecommendationCard.tsx  TickTickAuthButton.tsx  TickTickAuthButtonExpo.tsx  TodoItem.tsx
src/navigation/: AppNavigator.tsx
src/screens/: ChatScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
src/services/: aiService.ts  contextBuilder.ts  recommendationEngine.ts  ticktickService.ts
src/store/: chatStore.ts  todoStore.ts
src/types/: chat.ts  todo.ts
src/utils/: imagePicker.ts  storage.ts
(+88 files in other folders)
