[package]
name = "tomanage-desktop"
version = "1.0.0"
description = "AI-powered todo management for Mac"
authors = ["ToManage Team"]
edition = "2021"

[lib]
name = "tomanage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
